--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -27,7 +27,7 @@
   
   .gallery .gallery-item {
     margin-bottom: 30px;
-    width: 350px;
+    /* width: 350px; */
       height: 315px;
   }
   
